tests/invalid/ho_type_mode_bug.err_exp
ho_type_mode_bug.m:020: In the first argument of predicate `my_foldl2'/6:
ho_type_mode_bug.m:020:   error: the higher order inst
ho_type_mode_bug.m:020:     [38;5;203m`(pred(in, in, out) is det)'[39;49m
ho_type_mode_bug.m:020:   cannot describe the instantiation state of a value of
ho_type_mode_bug.m:020:   the higher-order type
ho_type_mode_bug.m:020:     [38;5;40m`pred(X, Y, Y, Z, Z)',[39;49m
ho_type_mode_bug.m:020:   because they have different arities. The higher order
ho_type_mode_bug.m:020:   type has [38;5;40mfive[39;49m arguments while the higher order inst
ho_type_mode_bug.m:020:   has [38;5;203mthree[39;49m arguments.
ho_type_mode_bug.m:029: In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:029:   in, in, out, di, uo)':
ho_type_mode_bug.m:029:   mode error in conjunction. The next four error
ho_type_mode_bug.m:029:   messages indicate possible causes of this error.
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:028:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:028:   in, in, out, di, uo)':
ho_type_mode_bug.m:028:   in argument 1 (i.e. the predicate term) of
ho_type_mode_bug.m:028:   higher-order predicate call:
ho_type_mode_bug.m:028:   mode error: context requires a [38;5;40mpredicate of[39;49m
ho_type_mode_bug.m:028:   [38;5;40marity five,[39;49m but [38;5;87m`P'[39;49m has [38;5;203marity three.[39;49m
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:029:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:029:   in, in, out, di, uo)':
ho_type_mode_bug.m:029:   in call to predicate `ho_type_mode_bug.my_foldl2'/6:
ho_type_mode_bug.m:029:   mode error: the insts of arguments [38;5;87m`P'[39;49m, [38;5;87m`T'[39;49m,
ho_type_mode_bug.m:029:   [38;5;87m`FirstAcc1'[39;49m, [38;5;87m`FirstAcc'[39;49m, [38;5;87m`SecAcc1'[39;49m and [38;5;87m`SecAcc'[39;49m [38;5;203mdo[39;49m
ho_type_mode_bug.m:029:   [38;5;203mnot match[39;49m either of the two modes of predicate
ho_type_mode_bug.m:029:   `ho_type_mode_bug.my_foldl2'/6.
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:029:     The inst of the first argument, [38;5;87m`P'[39;49m, which is
ho_type_mode_bug.m:029:     [38;5;203m`(pred(in, in, out) is det)',[39;49m does not match any of
ho_type_mode_bug.m:029:     the required insts.
ho_type_mode_bug.m:029:     (For higher order insts like this, the mismatch is
ho_type_mode_bug.m:029:     sometimes caused by the arity of the predicate or
ho_type_mode_bug.m:029:     function being different in the inst than in the
ho_type_mode_bug.m:029:     type.)
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:029:     The inst of the third argument, [38;5;87m`FirstAcc1'[39;49m, which
ho_type_mode_bug.m:029:     is [38;5;203m`free',[39;49m does not match any of the required
ho_type_mode_bug.m:029:     insts.
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:029:     The inst of the fifth argument, [38;5;87m`SecAcc1'[39;49m, which is
ho_type_mode_bug.m:029:     [38;5;203m`free',[39;49m does not match any of the required insts.
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:027:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:027:   in, in, out, di, uo)':
ho_type_mode_bug.m:027:   in argument 4 of clause head:
ho_type_mode_bug.m:027:   mode error in unification of `HeadVar__4' and
ho_type_mode_bug.m:027:   `FirstAcc'.
ho_type_mode_bug.m:027:   Variable [38;5;87m`HeadVar__4'[39;49m has instantiatedness [38;5;171m`free',[39;49m
ho_type_mode_bug.m:027:   variable [38;5;87m`FirstAcc'[39;49m has instantiatedness [38;5;171m`free'.[39;49m
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:027:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:027:   in, in, out, di, uo)':
ho_type_mode_bug.m:027:   in argument 6 of clause head:
ho_type_mode_bug.m:027:   mode error in unification of `HeadVar__6' and
ho_type_mode_bug.m:027:   `SecAcc'.
ho_type_mode_bug.m:027:   Variable [38;5;87m`HeadVar__6'[39;49m has instantiatedness [38;5;171m`free',[39;49m
ho_type_mode_bug.m:027:   variable [38;5;87m`SecAcc'[39;49m has instantiatedness [38;5;171m`free'.[39;49m
ho_type_mode_bug.m:029: In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:029:   in, in, out, in, out)':
ho_type_mode_bug.m:029:   mode error in conjunction. The next four error
ho_type_mode_bug.m:029:   messages indicate possible causes of this error.
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:028:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:028:   in, in, out, in, out)':
ho_type_mode_bug.m:028:   in argument 1 (i.e. the predicate term) of
ho_type_mode_bug.m:028:   higher-order predicate call:
ho_type_mode_bug.m:028:   mode error: context requires a [38;5;40mpredicate of[39;49m
ho_type_mode_bug.m:028:   [38;5;40marity five,[39;49m but [38;5;87m`P'[39;49m has [38;5;203marity three.[39;49m
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:029:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:029:   in, in, out, in, out)':
ho_type_mode_bug.m:029:   in call to predicate `ho_type_mode_bug.my_foldl2'/6:
ho_type_mode_bug.m:029:   mode error: the insts of arguments [38;5;87m`P'[39;49m, [38;5;87m`T'[39;49m,
ho_type_mode_bug.m:029:   [38;5;87m`FirstAcc1'[39;49m, [38;5;87m`FirstAcc'[39;49m, [38;5;87m`SecAcc1'[39;49m and [38;5;87m`SecAcc'[39;49m [38;5;203mdo[39;49m
ho_type_mode_bug.m:029:   [38;5;203mnot match[39;49m either of the two modes of predicate
ho_type_mode_bug.m:029:   `ho_type_mode_bug.my_foldl2'/6.
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:029:     The inst of the first argument, [38;5;87m`P'[39;49m, which is
ho_type_mode_bug.m:029:     [38;5;203m`(pred(in, in, out) is det)',[39;49m does not match any of
ho_type_mode_bug.m:029:     the required insts.
ho_type_mode_bug.m:029:     (For higher order insts like this, the mismatch is
ho_type_mode_bug.m:029:     sometimes caused by the arity of the predicate or
ho_type_mode_bug.m:029:     function being different in the inst than in the
ho_type_mode_bug.m:029:     type.)
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:029:     The inst of the third argument, [38;5;87m`FirstAcc1'[39;49m, which
ho_type_mode_bug.m:029:     is [38;5;203m`free',[39;49m does not match any of the required
ho_type_mode_bug.m:029:     insts.
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:029:     The inst of the fifth argument, [38;5;87m`SecAcc1'[39;49m, which is
ho_type_mode_bug.m:029:     [38;5;203m`free',[39;49m does not match any of the required insts.
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:027:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:027:   in, in, out, in, out)':
ho_type_mode_bug.m:027:   in argument 4 of clause head:
ho_type_mode_bug.m:027:   mode error in unification of `HeadVar__4' and
ho_type_mode_bug.m:027:   `FirstAcc'.
ho_type_mode_bug.m:027:   Variable [38;5;87m`HeadVar__4'[39;49m has instantiatedness [38;5;171m`free',[39;49m
ho_type_mode_bug.m:027:   variable [38;5;87m`FirstAcc'[39;49m has instantiatedness [38;5;171m`free'.[39;49m
ho_type_mode_bug.m:029: 
ho_type_mode_bug.m:027:   In clause for `my_foldl2((pred(in, in, out) is det),
ho_type_mode_bug.m:027:   in, in, out, in, out)':
ho_type_mode_bug.m:027:   in argument 6 of clause head:
ho_type_mode_bug.m:027:   mode error in unification of `HeadVar__6' and
ho_type_mode_bug.m:027:   `SecAcc'.
ho_type_mode_bug.m:027:   Variable [38;5;87m`HeadVar__6'[39;49m has instantiatedness [38;5;171m`free',[39;49m
ho_type_mode_bug.m:027:   variable [38;5;87m`SecAcc'[39;49m has instantiatedness [38;5;171m`free'.[39;49m
